# sirius-pacs

./: Cargo.toml  README.md  img.dcm  sr.dcm
app/: Cargo.toml
app/src/: main.rs
dckv/: Cargo.toml
dckv/src/: error.rs  filter.rs  kvmap.rs  lib.rs  parser.rs
rest/: .env  .gitignore  Cargo.toml
rest/doc/: dev.md
rest/docker/: docker-compose.yml
rest/migrations/2024-07-29-191014_initialize/: down.sql  up.sql
rest/src/: database.rs  error.rs  handlers.rs  main.rs  schema.rs
rest/src/models/: mod.rs  patients.rs
