[package]
name = "rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
tokio-util = { version = "0.7.11", features = ["io"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["trace"] }

serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"

diesel = "2.2"
diesel-async = { version = "0.5.0", features = ["mysql", "deadpool"] }
dotenvy = "0.15"
